@@ -36,6 +36,12 @@ HOW TO UPDATE?
 Breaking Changes:
 - Removed implicit default parameter to IsMouseDragging(int button = 0) to be consistent
   with other mouse functions (none of the other functions have it).
+- Obsoleted calling ImDrawList::PrimReserve() with a negative count (which was vaguely
+  documented and rarely if ever used). Instead we added an explicit PrimUnreserve() API
+  which can be implemented faster. Also clarified pre-existing constraints which weren't
+  documented (can only unreserve from the last reserve call). If you suspect you ever
+  used that feature before, #define IMGUI_DEBUG_PARANOID in imconfig.h to catch existing
+  calls. [@ShironekoBen]
 
 Other Changes:
 - Inputs: Added ImGuiMouseButton enum for convenience (e.g. ImGuiMouseButton_Right=1).
